# compare_decolorization

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
